--- a/sample.org
+++ b/sample.org
@@ -1,11 +1,17 @@
-  
+
 #+BEGIN_SRC emacs-lisp
   (defun mwe (x)
     "A minimal function.
   ,* This tests whether Org auto-escapes.
   ,,* This too."
-    (cond 
+    (cond
      (x (message "x is non-nil"))
      (t (message "x is nil")))
     t)
 #+END_SRC
+
+#+begin_src C
+  int main () {
+    /* Some trash */
+  }
+#+end_src
